recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:5: error: not found: value a
      return tl.head::lambda(tl,t,c+a);
                                    ^ButNlast:4: error: type mismatch;
 found   : Unit
 required: List[Int]
    if(c < t){
    ^